--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,6 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
+
+BAIDU_TRANSLATE_APPID=20180610000174388
+BAIDU_TRANSLATE_KEY=k_IvjVB71GXxRU1DoH6g
